--- a/kubernetes/dev/mcs/orders-depl.yaml
+++ b/kubernetes/dev/mcs/orders-depl.yaml
@@ -18,6 +18,9 @@ spec:
       containers:
         - name: orders
           image: quay.io/ultimatestack/orders-svc:v1-beta
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 4002
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
@@ -45,5 +48,5 @@ spec:
   ports:
     - name: orders
       protocol: TCP
-      port: 3000
-      targetPort: 3000
+      port: 4002
+      targetPort: 4002
