--- a/kubernetes/dev/dev-dbs/tickets-mongo-depl.yaml
+++ b/kubernetes/dev/dev-dbs/tickets-mongo-depl.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         app: tickets-mongo
+      # annotations:
+        # sidecar.istio.io/inject: "false"         
     spec:
       containers:
         - name: tickets-mongo
