--- a/kubernetes/dev/eventbus/nats-depl.yaml
+++ b/kubernetes/dev/eventbus/nats-depl.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         app: nats
+      # annotations:
+        # sidecar.istio.io/inject: "false"  
     spec:
       containers:
         - name: nats
@@ -43,11 +45,11 @@ spec:
   selector:
     app: nats
   ports:
-    - name: client
+    - name: tcp-client
       protocol: TCP
       port: 4222
       targetPort: 4222
-    - name: monitoring
+    - name: tcp-monitoring
       protocol: TCP
       port: 8222
       targetPort: 8222
