--- a/kubernetes/dev/istio/install/peerauth.yaml
+++ b/kubernetes/dev/istio/install/peerauth.yaml
@@ -1,8 +1,19 @@
-apiVersion: "security.istio.io/v1beta1"
-kind: "PeerAuthentication"
-metadata:
-  name: "default"
-  namespace: "istio-system"
-spec:
-  mtls:
-    mode: STRICT
+# apiVersion: "security.istio.io/v1beta1"
+# kind: "PeerAuthentication"
+# metadata:
+#   name: "default"
+#   namespace: "istio-system"
+# spec:
+#   mtls:
+#     mode: DISABLE
+
+# ---
+
+# apiVersion: "security.istio.io/v1beta1"
+# kind: "PeerAuthentication"
+# metadata:
+#   name: "custom-ds-ns"
+#   namespace: "msc-istio"
+# spec:
+#   mtls:
+#     mode: DISABLE
