--- a/kubernetes/dev/mcs/tickets-depl.yaml
+++ b/kubernetes/dev/mcs/tickets-depl.yaml
@@ -14,6 +14,8 @@ spec:
     metadata:
       labels:
         app: tickets
+      # annotations:
+      #   sidecar.istio.io/inject: "false" 
     spec:
       containers:
         - name: tickets
@@ -50,5 +52,6 @@ spec:
       protocol: TCP
       port: 4001
       targetPort: 4001
-  type: LoadBalancer
+  # type: LoadBalancer
+  type: ClusterIP
   
