labels added and service ports names modified. created seperate gateways and associated with them to their virtualservices

--- a/kubernetes/dev/dev-dbs/payments-mongo-depl.yaml
+++ b/kubernetes/dev/dev-dbs/payments-mongo-depl.yaml
@@ -26,7 +26,7 @@ spec:
   selector:
     app: payments-mongo
   ports:
-    - name: db
+    - name: mongo-db
       protocol: TCP
       port: 27017
       targetPort: 27017
