--- a/kubernetes/dev/dev-dbs/tickets-mongo-depl.yaml
+++ b/kubernetes/dev/dev-dbs/tickets-mongo-depl.yaml
@@ -28,7 +28,7 @@ spec:
   selector:
     app: tickets-mongo
   ports:
-    - name: db
+    - name: mongo-db
       protocol: TCP
       port: 27017
       targetPort: 27017
