--- a/kubernetes/dev/dev-dbs/auth-mongo-depl.yaml
+++ b/kubernetes/dev/dev-dbs/auth-mongo-depl.yaml
@@ -26,7 +26,7 @@ spec:
   selector:
     app: auth-mongo
   ports:
-    - name: db
+    - name: mongo-db
       protocol: TCP
       port: 27017
       targetPort: 27017
