--- a/kubernetes/dev/istio/ingress-virtualservice/msc-gateway.yaml
+++ b/kubernetes/dev/istio/ingress-virtualservice/msc-gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
-  name: msc-gateway
+  name: msc-auth-gateway
 spec:
   selector:
     istio: ingressgateway # use istio default controller
@@ -22,7 +22,7 @@ spec:
   hosts:
   - "*"
   gateways:
-  - msc-gateway
+  - msc-auth-gateway
   http:
   - match:
     - uri:
@@ -33,6 +33,23 @@ spec:
         port:
           number: 4000
 
+---
+apiVersion: networking.istio.io/v1beta1
+kind: Gateway
+metadata:
+  name: msc-ticket-gateway
+spec:
+  selector:
+    istio: ingressgateway # use istio default controller
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
+
+
 ---    
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
@@ -42,14 +59,33 @@ spec:
   hosts:
   - "*"
   gateways:
-  - msc-gateway
+  - msc-ticket-gateway
   http:      
   - match:
     - uri:
         prefix: /api/tickets
     route:
     - destination:
-        host: ticket-des
+        host: tickets-srv
+        port:
+          number: 4001
+
+---
+apiVersion: networking.istio.io/v1beta1
+kind: Gateway
+metadata:
+  name: msc-orders-gateway
+spec:
+  selector:
+    istio: ingressgateway # use istio default controller
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
+
 
 ---
 apiVersion: networking.istio.io/v1beta1
@@ -60,7 +96,7 @@ spec:
   hosts:
   - "*"
   gateways:
-  - msc-gateway
+  - msc-orders-gateway
   http:      
   - match:
     - uri:
@@ -68,3 +104,43 @@ spec:
     route:
     - destination:
         host: orders-srv
+        port:
+          number: 4002
+
+---
+
+apiVersion: networking.istio.io/v1beta1
+kind: Gateway
+metadata:
+  name: msc-payment-gateway
+spec:
+  selector:
+    istio: ingressgateway # use istio default controller
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
+
+
+---
+apiVersion: networking.istio.io/v1beta1
+kind: VirtualService
+metadata:
+  name: vs-payments-service
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - msc-payment-gateway
+  http:      
+  - match:
+    - uri:
+        exact: /api/payments
+    route:
+    - destination:
+        host: payments-srv
+        port:
+          number: 4004        
