--- a/kubernetes/dev/mcs/auth-depl.yaml
+++ b/kubernetes/dev/mcs/auth-depl.yaml
@@ -5,15 +5,18 @@ metadata:
   labels:
     type: dev-depl
     svcname: auth-svc
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: auth
+      # version: v1
   template:
     metadata:
       labels:
         app: auth
+        version: v1
     spec:
       containers:
         - name: auth
@@ -34,6 +37,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-srv
+  labels:
+    app: auth
+    service: auth
 spec:
   selector:
     app: auth
