--- a/kubernetes/dev/mcs/expiration-depl.yaml
+++ b/kubernetes/dev/mcs/expiration-depl.yaml
@@ -5,15 +5,18 @@ metadata:
   labels:
     type: dev-depl
     svcname: expiration-svc
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: expiration
+      # version: v1
   template:
     metadata:
       labels:
         app: expiration
+        version: v1
     spec:
       containers:
         - name: expiration
