--- a/kubernetes/dev/mcs/tickets-depl.yaml
+++ b/kubernetes/dev/mcs/tickets-depl.yaml
@@ -5,15 +5,18 @@ metadata:
   labels:
     type: dev-depl
     svcname: tickets-svc
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: tickets
+      # version: v1
   template:
     metadata:
       labels:
         app: tickets
+        version: v1
       # annotations:
       #   sidecar.istio.io/inject: "false" 
     spec:
@@ -44,11 +47,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tickets-srv
+  labels:
+    app: tickets
+    service: tickets
 spec:
   selector:
     app: tickets
   ports:
-    - name: tickets
+    - name: http-tickets
       protocol: TCP
       port: 4001
       targetPort: 4001
