added swagger spec to the auth-service,okteto ymls added to other services. version label added to the k8s msc deployment files

--- a/kubernetes/dev/mcs/expiration-depl.yaml
+++ b/kubernetes/dev/mcs/expiration-depl.yaml
@@ -11,7 +11,7 @@ spec:
   selector:
     matchLabels:
       app: expiration
-      # version: v1
+      version: v1
   template:
     metadata:
       labels:
