--- a/Auth-Service/package.json
+++ b/Auth-Service/package.json
@@ -16,6 +16,9 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/yamljs": "^0.2.31",
     "@wowowow/common": "^1.0.11",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
@@ -24,8 +27,11 @@
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.10.19",
+    "swagger-jsdoc": "6.0.0",
+    "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
