--- a/kubernetes/dev/mcs/auth-depl.yaml
+++ b/kubernetes/dev/mcs/auth-depl.yaml
@@ -11,7 +11,7 @@ spec:
   selector:
     matchLabels:
       app: auth
-      # version: v1
+      version: v1
   template:
     metadata:
       labels:
