--- a/Payment-Service/package.json
+++ b/Payment-Service/package.json
@@ -16,6 +16,8 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/yamljs": "^0.2.31",
     "@wowowow/common": "^1.0.11",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
@@ -27,8 +29,10 @@
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "stripe": "^8.138.0",
+    "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
