added swagger OPENAPI spec for the ticket service, updated status code in update route and reconfigured validation in new ticket route

--- a/Orders-Service/src/orders-svc.yml
+++ b/Orders-Service/src/orders-svc.yml
@@ -102,6 +102,7 @@ paths:
       security:
         - cookieAuth: []
       requestBody:
+        required: true
         content:
           application/json:
             schema:
