--- a/kubernetes/dev/mcs/orders-depl.yaml
+++ b/kubernetes/dev/mcs/orders-depl.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: orders
-          image: quay.io/ultimatestack/orders-svc:v1.1-beta
+          image: quay.io/ultimatestack/orders-svc:v1.2-beta
           imagePullPolicy: Always
           ports:
             - containerPort: 4002
@@ -40,6 +40,9 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+          envFrom:
+            - configMapRef:
+                name: host-config                  
 ---
 apiVersion: v1
 kind: Service
