--- a/kubernetes/dev/mcs/payments-depl.yaml
+++ b/kubernetes/dev/mcs/payments-depl.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: payments
-          image: quay.io/ultimatestack/payment-svc:v1.1-beta
+          image: quay.io/ultimatestack/payment-svc:v1.2-beta
           imagePullPolicy: Always
           ports:
             - containerPort: 4004
@@ -45,6 +45,9 @@ spec:
                 secretKeyRef:
                   name: stripe-secret
                   key: STRIPE_KEY
+          envFrom:
+            - configMapRef:
+                name: host-config                  
 ---
 apiVersion: v1
 kind: Service
