--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,8 +1,15 @@
-FROM node:lts-alpine
+FROM quay.io/narendev/fishnode:alpine
 
 WORKDIR /app
+
 COPY package.json .
+
 RUN yarn install
+
 COPY . .
+
+# RUN yarn build 
+
+EXPOSE 3001
 
 CMD ["yarn","dev"]
