--- a/kubernetes/staging/gitops-setup/argocd-app-config.yaml
+++ b/kubernetes/staging/gitops-setup/argocd-app-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: glotixz-app-deploy
+  name: glotixz-app-backends-deploy
   namespace: argocd
 spec:
   project: default
@@ -13,7 +13,7 @@ spec:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: glotixz
+    namespace: glotixz-backend
   syncPolicy:
     automated:
       prune: false
