made a uri rewrite rule change in the frontend istioirtualservice

--- a/gitops/Frontend/frontend-istiovirtualservice.yaml
+++ b/gitops/Frontend/frontend-istiovirtualservice.yaml
@@ -11,6 +11,8 @@ spec:
   - match:
     - uri:
         prefix: /
+    rewrite:
+      uri: /bluedeployment    
     route:
     - destination:
         host: frontend-srv
